<?xml version="1.0"?>
<package format="3">
  <name>robot_base</name>
  <version>0.0.1</version>
  <description>Serial bridge between ESP32 and ROS2</description>
  <maintainer email="vantra@robot.com">vantra</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
